2007-04-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000998: Source Ref link refers to nothing in
	  Narrative web report.

2007-04-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 0000996: Individual attributes do no include
	  source reference citations in Narrative Web report.

2007-04-04  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/Checkpoint.py: 0000993: Checkpoint tool crashes in Windows

2007-04-04  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/GrampsWidgets.py (Statusbar): min width given in #chars;
	right alignment of a bar is enabled.
	* src/DisplayState.py (DisplayState.__init__): statusbar creation
	with modified parameters.

2007-04-02  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: shorten match message
	* src/GrampsDb/Makefile.am: Added _HelperFunctions.py
	* src/GrampsDb/__init__.py: Added _HelperFunctions.py
	* src/GrampsDb/_HelperFunctions.py: Added support functions

2007-04-01  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: handle close/delete of active database
	* src/DbManager.py: clean up
	* src/DbState.py: issue database-changed signal on db close
	* src/GrampsDbUtils/_GedcomParse.py: fix adding of notes
	* src/DbLoader.py: don't give undo warning if importing into empty db
	* src/DataViews/_PedigreeView.py: display matches in statusbar
	* src/DataViews/_PersonView.py: display matches in statusbar
	* src/DataViews/_RelationView.py: display matches in statusbar
	* src/DisplayState.py: display matches in statusbar
	* src/DisplayModels/_BaseModel.py: display matches in statusbar
	* src/DisplayModels/_PeopleModel.py: display matches in statusbar
	* src/GrampsDbUtils/_GedcomParse.py: display matches in statusbar
	* src/PageView.py: display matches in statusbar
	* src/Filters/_SearchBar.py: display matches in statusbar
	* src/DbManager.py: fix default file name
