@@ -577,15 +577,17 @@ class EditPerson(EditPrimary):
                         "the person's marriages.")
                 ErrorDialog(msg2, msg)
 
-    def save(self, *obj):
+    def save(self, obj):
         """
         Save the data.
         """
 
+        self.ok_button.set_sensitive(False)
         if self.object_is_empty():
             ErrorDialog(_("Cannot save person"), 
                         _("No data exists for this person. Please "
                           "enter data or cancel the edit."))
+            self.ok_button.set_sensitive(True)
             return
         
         self._check_for_unknown_gender()
